--- a/10-基本数据类型.html
+++ b/10-基本数据类型.html
@@ -13,6 +13,8 @@
         const PI = 3.14;
         let r = prompt('请输入圆的半径')
         alert('圆的面积为: ' + PI * r * r)
+        // 布尔类型
+        console.log(3 > 4);
     </script>
 </body>
 
