未定义类型

--- a/10-基本数据类型.html
+++ b/10-基本数据类型.html
@@ -15,6 +15,9 @@
         alert('圆的面积为: ' + PI * r * r)
         // 布尔类型
         console.log(3 > 4);
+        // 未定义类型
+        let array
+        alert(array)
     </script>
 </body>
 
