--- a/10-基本数据类型.html
+++ b/10-基本数据类型.html
@@ -18,6 +18,9 @@
         // 未定义类型
         let array
         alert(array)
+        // 空类型
+        let sum = null
+        console.log(sum)
     </script>
 </body>
 
