比较运算符_补充

--- a/day_02/01-运算符.html
+++ b/day_02/01-运算符.html
@@ -33,6 +33,20 @@
         console.log('aa' < 'ab')
         console.log('aa' < 'aac')
         // 尽量不要比较小数(精度问题)
+
+        // 逻辑运算符
+        console.log(true && true)
+        console.log(true && false)
+        console.log(3 > 2 && 5 > 4)
+        console.log(3 > 2 && 4 > 5)
+
+        console.log(true || true);
+        console.log(true || false);
+        console.log(false || true);
+        console.log(false || false);
+
+        console.log(!true)
+        console.log(!false)
     </script>
 </body>
 
