--- a/day_02/01-运算符.html
+++ b/day_02/01-运算符.html
@@ -47,6 +47,14 @@
 
         console.log(!true)
         console.log(!false)
+
+        // 实际案例
+        let num = Number(prompt('请输入一个数字'))
+        if (num % 4 === 0 && num % 100 !== 0) {
+            alert('true')
+        } else {
+            alert('false')
+        }
     </script>
 </body>
 
