--- a/day_02/02-分支语句.html
+++ b/day_02/02-分支语句.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-    <script>
-
-    </script>
+<script>
+    let score = Number(prompt('请输入您的高考成绩'))
+    if (score > 700) {
+        alert('恭喜您被清华大学录取~')
+    }
+</script>
 </body>
 
 </html>
