--- a/day_02/02-分支语句.html
+++ b/day_02/02-分支语句.html
@@ -12,6 +12,8 @@
     let score = Number(prompt('请输入您的高考成绩'))
     if (score > 700) {
         alert('恭喜您被清华大学录取~')
+    } else {
+        alert('您可以去看看上海交大~')
     }
 </script>
 </body>
