分支语句_补充（01）

--- a/day_02/03-用户输入案例.html
+++ b/day_02/03-用户输入案例.html
@@ -11,7 +11,7 @@
     <script>
         let user_name = prompt('请输入您的用户名')
         let user_pwd = Number(prompt('请输入您的密码'))
-        if (user_name === 'MELANCHOLY' && user_pwd == 15929867187) {
+        if (user_name === 'MELANCHOLY' && user_pwd === 15929867187) {
             alert('登录成功~')
         } else {
             alert('登录失败~')
