--- a/day_02/04-判断闰年案例.html
+++ b/day_02/04-判断闰年案例.html
@@ -11,9 +11,9 @@
     <script>
         let year = Number(prompt('请输入年份~'))
         if ((year % 4 === 0 && year % 100 !== 0) || year % 400 === 0) {
-            alert('该年是闰年~')
+            alert(`${year}年是闰年~`)
         } else {
-            alert('该年不是闰年~')
+            alert(`${year}年是平年~`)
         }
     </script>
 </body>
