三元运算符_补充

--- a/day_02/01-运算符.html
+++ b/day_02/01-运算符.html
@@ -55,6 +55,9 @@
         } else {
             alert('false')
         }
+
+        // 三元运算符
+        console.log(3 > 5 ? 3 : 5)
     </script>
 </body>
 
