--- a/day_02/06-数字补0案例.html
+++ b/day_02/06-数字补0案例.html
@@ -10,7 +10,8 @@
 <body>
     <script>
         let num = Number(prompt('请输入一个数字'))
-        num < 10 ? alert('0' + num) : alert(num)
+        num = num < 10 ? '0' + num : num
+        alert(num)
     </script>
 </body>
 
