--- a/day_02/06-数字补0案例.html
+++ b/day_02/06-数字补0案例.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        let num = Number(prompt('请输入一个数字'))
+        let num = prompt('请输入一个数字')
         num = num < 10 ? '0' + num : num
         alert(num)
     </script>
