--- a/day_03/01-for循环的基本使用.html
+++ b/day_03/01-for循环的基本使用.html
@@ -11,7 +11,10 @@
     <script>
         let sum = 0;
         for (let i = 1; i <= 100; i++) {
-            sum += i;
+            if (i % 2 == 0) {
+                sum += i
+
+            }
         }
         alert(sum)
     </script>
