--- a/day_04/06-立即执行函数.html
+++ b/day_04/06-立即执行函数.html
@@ -10,9 +10,9 @@
 <body>
     <script>
         // 立即执行函数
-        (function () {
-            console.log(11);
-        })();   
+        (function (x, y) {
+            console.log(x + y);
+        })(1, 2);   
     </script>
 </body>
 
