--- a/day_04/07-转换时间案例.html
+++ b/day_04/07-转换时间案例.html
@@ -11,9 +11,9 @@
     <script>
         let time = Number(prompt('请输入秒数'))
         function getTime(time) {
-            hour = parseInt(time / 60 / 60 % 24)
-            minute = parseInt(time / 60 % 60)
-            second = parseInt(time % 60)
+            let hour = parseInt(time / 60 / 60 % 24)
+            let minute = parseInt(time / 60 % 60)
+            let second = parseInt(time % 60)
             hour = hour < 10 ? '0' + hour : hour
             minute = minute < 10 ? '0' + minute : minute
             second = second < 10 ? '0' + second : second;
