--- a/day_04/08-逻辑中断.html
+++ b/day_04/08-逻辑中断.html
@@ -11,6 +11,7 @@
     <script>
         let age = 18;
         console.log(false && age++);
+        console.log(11 || age++);
         document.write(age);
     </script>
 </body>
