--- a/day_04/08-逻辑中断.html
+++ b/day_04/08-逻辑中断.html
@@ -12,6 +12,8 @@
         let age = 18;
         console.log(false && age++);
         console.log(11 || age++);
+        // 都为真则返回最后一个真值
+        console.log(11 && 22);
         document.write(age);
     </script>
 </body>
