--- a/day_04/08-逻辑中断.html
+++ b/day_04/08-逻辑中断.html
@@ -14,6 +14,8 @@
         console.log(11 || age++);
         // 都为真则返回最后一个真值
         console.log(11 && 22);
+        // 逻辑或输出第一个真值
+        console.log(11 || 22);
         document.write(age);
     </script>
 </body>
