--- a/day_04/09-转换为布尔型.html
+++ b/day_04/09-转换为布尔型.html
@@ -11,6 +11,8 @@
     <script>
         // 0,undefined,null,false,NaN转换为布尔值后都是false，其余则为true
         console.log(Boolean(0));
+        // null经过数字转换后会变成0
+        // undefined经过数字转换之后会变成NaN
     </script>
 </body>
 
